# Rustbeef

./: .gitignore  .gitmodules  README.md
docs/: README.md  tool.md  world_generator-1.md  world_generator.md
docs/.obsidian/: workspace.json
endless_heights/: Cargo.toml
endless_heights/src/: lib.rs
endless_heights/src/height/: mod.rs
endless_heights/src/utils/: mod.rs
gui/: Cargo.toml
gui/assets/: terrain.tsx
gui/assets/shaders/: voxel_data.wgsl
gui/src/: main.rs  nla_compass.rs  world_generator.rs  world_utils.rs
gui/src/components/: camera.rs  cube.rs  material.rs  mod.rs  voxel.rs  world.rs
gui/src/components/controllers/: gamepad.rs  mouse.rs
gui/src/components/render/: chunk_material.rs  mesh.rs
gui/src/components/robot/: mod.rs
gui/src/components/storage/: buffer.rs  chunk_map.rs
gui/src/components/terraingen/: mod.rs
gui/src/components/world/: chunks.rs  chunks_anim.rs  generator.rs  materials.rs  meshing.rs  mod.rs  render.rs  sky.rs  terrain.rs
nla_compass/: Cargo.toml  README.md
nla_compass/src/: lib.rs
nla_compass/src/compass/: helpers.rs  mod.rs
nla_compass/src/dijkstra/: helpers.rs  mod.rs
nla_compass/src/probabilistic_choice/: mod.rs
nla_compass/src/probabilistic_model/: helpers.rs  mod.rs
nla_compass/src/probabilistic_model/probabilistic_choice/: mod.rs
nla_compass/src/utils/: mod.rs  probabilistic_choice.rs
world_generator/: Cargo.toml
world_generator/src/: main.rs
