[package]
name = "endless_heights"
version = "0.1.0"
edition = "2021"
description = "A map generator for diverse heights."
authors = ["Thomas Pasquali", "Salvatore Andaloro", "Claudio Foroncelli", "Florian Kandra"]
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
robotics_lib = { version = "0.1.21", registry = "kellnr"}
strum = "0.25.0"
