[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
robotics_lib = { path = "../Robotic-Lib" }
endless_heights = { path = "../endless_heights" }
strum = "0.25.0"
bevy = "0.12.1"
