[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
robotics_lib = { path = "../Robotic-Lib" }
endless_heights = { path = "../endless_heights" }
nla_compass = { path = "../nla_compass" }
strum = "0.25.0"
bevy = "0.12.1"
bevy_extern_events = "0.3.0"
bevy_atmosphere = "0.8.1"
block-mesh = "0.2.0"
ndshape = "0.3.0"
ilattice = { version="0.4.0", features=["morton-encoding", "glam"]}
ndcopy = "0.3.0"
bitflags = "2.4.1"
float-ord = "0.3.2"
futures-lite = "2.1.0"
once_cell = "1.18.0"
thread_local = "1.1.7"
