[package]
name = "RustBeef_NLACompass"
version = "0.1.0"
edition = "2021"
description = "A compass that suggests directions to reach a set destination."
authors = ["Thomas Pasquali", "Salvatore Andaloro", "Claudio Foroncelli", "Florian Kandra"]
publish = ["kellnr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr"}
rand = { version = "0.8.5", features = [] }
pathfinding = "4.4.0"
env_logger = "0.10.1"
log = "0.4.20"